--- a/WakaTime.csproj
+++ b/WakaTime.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
@@ -55,9 +56,17 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Logger.cs" />
+    <Compile Include="NativeMethods.cs" />
+    <Compile Include="ProcessorArchitectureHelper.cs" />
+    <Compile Include="PythonCliParameters.cs" />
+    <Compile Include="PythonManager.cs" />
+    <Compile Include="RunProcess.cs" />
     <Compile Include="WakaTime.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="WakaTimeConfigFile.cs" />
+    <Compile Include="WakaTimeConstants.cs" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="EnvDTE">
